--- a/src/main/resources/associate-profile/associate-profile.html
+++ b/src/main/resources/associate-profile/associate-profile.html
@@ -38,7 +38,7 @@
                             <li><img src="https://s2.svgbox.net/materialui.svg?color=white&ic=edit"><a
                                     href="http://localhost:9001/EditProfile"> Edit profile</a></li>
                             <li><img src="https://s2.svgbox.net/materialui.svg?color=white&ic=vpn_key"><a
-                                    href="http://localhost:9001/ChangePassword"> Change Password </a></li>
+                                    href="http://localhost:9001/changepassword"> Change Password </a></li>
                             <li><img src="https://s2.svgbox.net/materialui.svg?color=white&ic=delete_forever"> <a
                                     onclick="confirmDelete();">Delete Account </a></li>
                         </ul>
