Updated pathing for html validation

--- a/src/main/resources/associate-profile/associate-profile.html
+++ b/src/main/resources/associate-profile/associate-profile.html
@@ -36,9 +36,9 @@
                         <h3 id="profileUser"><br><span id="profileEmail"></span></h3>
                         <ul>
                             <li><img src="https://s2.svgbox.net/materialui.svg?color=white&ic=edit"><a
-                                    href="http://localhost:9001/EditProfile"> Edit profile</a></li>
+                                    href="http://localhost:9001/editassociateprofile"> Edit profile</a></li>
                             <li><img src="https://s2.svgbox.net/materialui.svg?color=white&ic=vpn_key"><a
-                                    href="http://localhost:9001/changepassword"> Change Password </a></li>
+                                    href="http://localhost:9001/passwordchange"> Change Password </a></li>
                             <li><img src="https://s2.svgbox.net/materialui.svg?color=white&ic=delete_forever"> <a
                                     onclick="confirmDelete();">Delete Account </a></li>
                         </ul>
