--- a/src/main/resources/AssociateDashboard/associate-dashboard.html
+++ b/src/main/resources/AssociateDashboard/associate-dashboard.html
@@ -34,7 +34,7 @@
                 <div class="menu">
                     <h3 id="profileUser"><br><span id="profileEmail"></span></h3>
                     <ul>
-                        <li><img src="https://s2.svgbox.net/materialui.svg?color=white&ic=edit"><a href="http://localhost:9001/editassociateprofile"> Edit profile</a></li>
+                        <li><img src="https://s2.svgbox.net/materialui.svg?color=white&ic=edit"><a href="http://localhost:9001/associateprofile"> Edit profile</a></li>
                         <li><img src="https://s2.svgbox.net/materialui.svg?color=white&ic=vpn_key"><a href="http://localhost:9001/passwordchange"> Change Password </a></li>
                         <li><img src="https://s2.svgbox.net/materialui.svg?color=white&ic=delete_forever"> <a onclick="confirmDelete();">Delete Account </a></li>
                     </ul>
