--- a/src/main/resources/trainer-profile/trainer-profile.html
+++ b/src/main/resources/trainer-profile/trainer-profile.html
@@ -20,7 +20,7 @@
         <div class="navbar-container">
             <div class="navbar-top">
                 <div class="topnav">
-                    <a class="active" href="#home">Home</a>
+                    <a class="active" href="http://localhost:9001/employeeHome">Home</a>
                     <a href="#news">News</a>
                     <a href="#contact">Contact</a>
                     <a href="#about">About</a>
